deps/src/cmake-3.13.4/Tests/RunCMake/Syntax/CommandEOF-stderr.txt
^CMake Error in CommandEOF.cmake:
  Unexpected end of file.

  Parse error.  Function missing opening "\(".
Call Stack \(most recent call first\):
  CMakeLists.txt:3 \(include\)$
